<?xml version="1.0"?>
<package format="2">
  <name>robotis_humanoid_robot_common</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the ROBOTIS HUMANOID_ROBOT (meta package).
    This meta package provides launch files and plug-in for Gazebo and RViz.
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>


  <url type="website">http://wiki.ros.org/robotis_humanoid_robot_common</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/humanoid_robot/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Common</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_robot_description</build_depend>
  <build_depend>humanoid_robot_gazebo</build_depend>

  <build_export_depend>humanoid_robot_description</build_export_depend>
  <build_export_depend>humanoid_robot_gazebo</build_export_depend>

  <exec_depend>humanoid_robot_description</exec_depend>
  <exec_depend>humanoid_robot_gazebo</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
